Set the used padding on the scrolled frame, since we're munging its padding. Bug 370794, r+sr=dbaron