layout/generic/nsHTMLReflowState.h
@@ -172,6 +172,12 @@ public:
                    const nsMargin *aBorder = nsnull,
                    const nsMargin *aPadding = nsnull);
 
+  // Destructor for usedPaddingProperty
+  static void DestroyMarginFunc(void*    aFrame,
+                                nsIAtom* aPropertyName,
+                                void*    aPropertyValue,
+                                void*    aDtorData);
+
 private:
   // Computes margin values from the specified margin style information, and
   // fills in the mComputedMargin member
